
syntax = "proto3";
package dozer_admin_grpc;
import "protos/connection/connection_type.proto";
import "protos/connection/authentication.proto";

message ConnectionInfo {
  string id = 1;
  string app_id = 2;
  string name = 3;
  DBType type = 4;
  Authentication authentication = 5;
}