syntax = "proto3";
package dozer_admin_grpc;
message EthereumAuthentication {
  string wss_url = 1;
  EthereumFilter filter = 2;
}

message EthereumFilter {
  optional uint64 from_block = 1;
  repeated string addresses = 2;
  repeated string topics = 3;
}