
syntax = "proto3";
package dozer_admin_grpc;

message EndpointInfo {
  string id = 1;
  string app_id = 2;
  string name = 3;
  string path = 4;
  string sql = 5;
  ApiIndex index = 6;
}

message ApiIndex {
  repeated string primary_key = 1;
}