syntax = "proto3";
package dozer_admin_grpc;
import "protos/connection/connection_info.proto";
message SourceInfo {
  string id = 1;
  string app_id = 2;
  string name = 3;
  string table_name = 4;
  repeated string columns = 5;
  ConnectionInfo connection = 6;
}
